--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,11 @@
 
     <ImageView
         android:id="@+id/mainImage"
-        android:layout_width="375dp"
-        android:layout_height="515dp"
+        android:layout_width="match_parent"
+        android:layout_height="518dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.916"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/stage1" />
@@ -42,13 +43,14 @@
 
     <TextView
         android:id="@+id/guessedLetters"
-        android:layout_width="98dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="44dp"
-        android:text="guessedLetters"
-        app:layout_constraintBottom_toBottomOf="@+id/button"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toTopOf="@+id/button" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:gravity="top"
+        android:text="g"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/mainImage" />
 
     <TextView
         android:id="@+id/goalStringDisplay"
