Made listselect layout compatible with smaller screens

--- a/app/src/main/res/layout/rv_row.xml
+++ b/app/src/main/res/layout/rv_row.xml
@@ -11,11 +11,11 @@
 
     <TextView
         android:id="@+id/listNameRow"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:gravity="center_vertical"
         android:text="ListName"
         android:textSize="20dp"
@@ -27,21 +27,24 @@
         android:id="@+id/scoreboardButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Scoreboard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/playListButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/playListButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
         android:onClick="onClickPlayList"
         android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/scoreboardButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
