--- a/app/src/main/res/layout/rv_row.xml
+++ b/app/src/main/res/layout/rv_row.xml
@@ -6,6 +6,7 @@
     android:layout_height="80dp"
     android:layout_marginTop="3dp"
     android:padding="6dip"
+    android:background="#FFFFFF"
     android:id="@+id/parent_layout">
 
 
