--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,8 @@
         android:text="Step"
         app:layout_constraintBottom_toBottomOf="@id/letterWheel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toEndOf="@+id/letterWheel"
         app:layout_constraintTop_toTopOf="@id/letterWheel" />
 
     <Button
@@ -25,10 +25,23 @@
         android:layout_height="wrap_content"
         android:onClick="restartGame"
         android:text="Step"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/letterWheel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goalStringDisplay" />
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toEndOf="@+id/letterWheel"
+        app:layout_constraintTop_toTopOf="@id/letterWheel" />
+
+    <Button
+        android:id="@+id/attemptButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="attemptGuess"
+        android:text="Attempt"
+        app:layout_constraintBottom_toBottomOf="@id/letterWheel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toEndOf="@+id/restartButton"
+        app:layout_constraintTop_toTopOf="@id/letterWheel" />
 
     <ImageView
         android:id="@+id/mainImage"
@@ -47,11 +60,9 @@
         android:id="@+id/letterWheel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guessButton"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/mainImage"
         app:layout_constraintTop_toBottomOf="@+id/goalStringDisplay" />
 
